整合message成功